usb: bam: Disable enum-conversion warning
The fixes for most of these warnings are in msm-4.4 as 98a667af9e9e ("msm:
usb_bam: Fix failure of remove by of_platform_depopulate") and
a888e61e3777 ("usb_bam: Delete IPA resources in usb_bam_remove()"). If
someone wants to backport those and revert this, they are more than
welcome to.

Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/drivers/platform/msm/Makefile
+++ b/drivers/platform/msm/Makefile
@@ -15,6 +15,7 @@ obj-$(CONFIG_I2C_MSM_PROF_DBG) += i2c-msm-prof-dbg.o
 obj-$(CONFIG_IPA) += ipa/
 obj-$(CONFIG_SPS) += sps/
 obj-$(CONFIG_QPNP_POWER_ON) += qpnp-power-on.o
+CFLAGS_usb_bam.o := $(call cc-disable-warning, enum-conversion)
 obj-$(CONFIG_QPNP_VIBRATOR) += qpnp-vibrator.o
 obj-$(CONFIG_QPNP_CLKDIV) += qpnp-clkdiv.o
 obj-$(CONFIG_QPNP_COINCELL) += qpnp-coincell.o
