--- a/arch/arm64/boot/dts/huawei/huawei-common.dtsi
+++ b/arch/arm64/boot/dts/huawei/huawei-common.dtsi
@@ -36,6 +36,13 @@
 					mnt_flags = "ro,barrier=1";
 					fsmgr_flags = "wait";
 				};
+                                system {
+                                        compatible = "android,system";
+                                        dev = "/dev/block/platform/soc.0/f9824900.sdhci/by-name/system";
+                                        type = "ext4";
+                                        mnt_flags = "ro,barrier=1";
+                                        fsmgr_flags = "wait";
+                                };
 			};
 		};
 	};
